Ensure using only up to Java 11 features